--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -378,6 +378,7 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 	&.header-index{
 		position: fixed;
 		background: rgba(255, 255, 255, 0.0);
+		box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 		.nav{
 			a{
 				color: #fff;
@@ -408,6 +409,7 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 	&.header-fixed{
 		background: rgba(255, 255, 255, 0.9);
 		backdrop-filter: blur(5px);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 		.nav{
 			a{
 				color: #2F4368;
@@ -905,6 +907,13 @@ p{
 		align-items: center;
 		padding: 10px 0;
 	}
+	.line{
+		display: block;
+		width: 1px;
+		background: #EDEDED;
+		height: 100%;
+		margin: 0 auto;
+	}
 }//main-section-2
 .testimonials{
 	background: #EDEDED;
@@ -1099,6 +1108,18 @@ p{
 		}
 	}
 }//medzone-banner
+.page-banner{
+	.img{
+		background: #2F4368;
+		height: 700px;
+		img{
+			display: block;
+			width: 100% !important;
+			height: 100% !important;
+			object-fit: cover;
+		}
+	}
+}//page-banner
 .blog-banner{
 	background: #2F4368;
 	padding: 175px 0 125px;
@@ -1129,6 +1150,32 @@ p{
 	padding: 100px 0;
 	.bg-white{
 		padding-top: 80px;
+		padding-bottom: 80px;
+		box-shadow: 0 4px 44px rgba(0,0,0,.125);
+	}
+	.img-set{
+		position: relative;
+		margin-top: -300px;
+		img{
+			display: block;
+			max-width: 100%;
+			height: auto;
+			margin: 0 auto;
+		}
+		.img-1{
+			position: absolute;
+			left: 0;
+			top: -90px;
+		}
+		.img-2{
+			position: relative;
+			margin: 0 auto;
+		}
+		.img-3{
+			position: absolute;
+			right: 0;
+			top: -40px;
+		}
 	}
 	.head.t-center{
 		h2{
@@ -1298,6 +1345,81 @@ p{
 		z-index: 8;
 	}
 }//product-section-1
+.documents-section{
+	.item{
+		box-shadow: 0 4px 44px rgba(0,0,0,.125);
+		background: #fff;
+		height: 100%;
+		.img{
+			border-bottom: 1px solid #EDEDED;
+			height: 238px;
+			display: grid;
+			place-items: center;
+			img{
+				display: block;
+				max-width: 100%;
+				height: auto;
+				margin: 0 auto;
+			}
+		}
+		.text-article{
+			padding: 40px;
+			text-align: center;
+		}
+	}
+	.pdf-item{
+		margin-top: 80px;
+		a{
+			display: block;
+			position: relative;
+			transition: .4s;
+			img{
+				display: block;
+				max-width: 100%;
+				height: auto;
+			}
+			.icon{
+				background: #fff;
+				position: absolute;
+				right: 0;
+				bottom: 30px;
+				width: 100px;
+				height: 100px;
+				display: grid;
+				place-items: center;
+			}
+		}
+	}
+}//document-section
+.contact-info{
+	padding: 80px 0;
+	.item{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		color: #000000;
+		.icon{
+			display: block;
+			margin-bottom: 20px;
+			img{
+				display: block;
+			}
+		}
+		span{
+			display: block;
+			color: #000000;
+		}
+	}
+}//contact-info
+.map{
+	height: 850px;
+	iframe{
+		width: 100%;
+		height: 100%;
+		border: none;
+	}
+}//map
 .footer{
 	background: url(../images/footer-vektor.png) bottom center no-repeat #2CA9AD;
 	padding: 80px 0;
