--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -266,8 +266,7 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 			}
 			@media (max-width: 1400px){
 				padding: 40px 10px;
-				font-size: 12px;
-				letter-spacing: -.25px;
+				font-size: 14px;
 			}
 			@media (max-width: 1200px){
 				padding: 40px 5px;
@@ -357,6 +356,7 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
+		flex-wrap: wrap;
 		gap: 20px;
 		span{
 			display: block;
@@ -455,30 +455,13 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 		.row{
 			flex-direction: column;
 		}
-		.col-lg-2{
-			order: 1;
-		}
-		.col-lg-5{
-			order: 2;
-		}
 		.logo{
-			background: #000;
-			margin-left: -5px;
-			margin-right: -5px;
-			.logo-text{
-				opacity: 1 !important;
-			}
-			.logo-symbol{
-				opacity: 0 !important;
-			}
+			padding-top: 20px;
 			a{
-				height: 70px;
-				.logo-text,.logo-symbol{
-					max-width: 200px;
-				}
+				justify-content: center;
 			}
 		}
-		.nav,.nav-2{
+		.nav{
 			flex-direction: column !important;
 			padding-top: 30px;
 			ul{
@@ -486,14 +469,6 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 				li{
 					max-width: 100%;
 					flex: 0 0 100%;
-					&.active{
-						a{
-							.sub-menu-arrow{
-								top: 1px;
-								transform: rotateY(180deg) rotateX(180deg);
-							}
-						}
-					}
 				}
 			}
 			a{
@@ -502,66 +477,41 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 				padding: 10px;
 				text-align: center;
 				position: relative;
+				color: #fff;
 				@media (max-width: 360px){
 					font-size: 26px;
 				}
-				.sub-menu-arrow{
-					display: block;
-					position: absolute;
-					right: 10px;
-					top: 10px;
-					transform: rotateY(0deg) rotateX(0deg);
-					transition: .4s;
-					@media (max-width: 360px){
-						right: 0px;
-					}
-				}
-			}
-			.sub-menu{
-				position: relative;
-				width: 100%;
-				padding: 0;
-				opacity: 1;
-				pointer-events: all;
-				overflow: hidden;
-				max-height: 0;
-				background: transparent;
-				transition: max-height 0.5s cubic-bezier(1, 0, .25, 1);
-				&:before{
-					display: none;
-				}
-				.menu-list{
-					padding: 0px 0 10px;
-					width: 100%;
-					ul{
-						li{
-							a{
-								font-size: 25px;
-								&:after{
-									display:none;
-								}
-							}
-						}
-					}
-				}
-				.menu-img{
-					width: 100%;
-					height: auto;
-					display: none;
-				}
-				&.open{
-					display: block;
-				}
-			}
-			.language-link{
-				justify-content: center;
-			}
-			.search-icon{
-				display: none;
 			}
 		}
-		.nav-2{
-			padding-top: 30px;
+		.support-line{
+			padding: 20px 0;
+			justify-content: center;
+		}
+		.nav{
+			a{
+				color: #fff !important;
+			}
+		}
+		.logo{
+			a{
+				.logo-1{
+					fill: #fff !important;
+				}
+				.logo-2{
+					fill: #fff !important;
+				}
+				.logo-3{
+					fill: #fff !important;
+				}
+			}
+		}
+		.support-line{
+			span{
+				color: #fff !important;
+			}
+			a{
+				color: #fff !important;
+			}
 		}
 	}
 }//header
@@ -626,6 +576,15 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 			color: #2F4368;
 			font-weight: 300;
 		}
+		@media (max-width: 1200px){
+			font-size: 40px;
+		}
+		@media (max-width: 992px){
+			font-size: 36px;
+		}
+		@media (max-width: 768px){
+			font-size: 32px;
+		}
 	}
 }
 p{
@@ -640,6 +599,18 @@ p{
 		line-height: 1.25;
 		color: #000000;
 		margin-bottom: 10px;
+	}
+	@media (max-width: 1200px){
+		font-size: 21px;
+		span{
+			font-size: 32px;
+		}
+	}
+	@media (max-width: 992px){
+		font-size: 19px;
+		span{
+			font-size: 26px;
+		}
 	}
 }
 .detail-btn{
@@ -726,6 +697,22 @@ p{
 						color: #fff;
 						margin-bottom: 15px;
 					}
+					@media (max-width: 992px){
+						h1{
+							font-size: 40px;
+						}
+						p{
+							font-size: 30px;
+						}
+					}
+					@media (max-width: 768px){
+						h1{
+							font-size: 34px;
+						}
+						p{
+							font-size: 26px;
+						}
+					}
 				}
 			}
 		}
@@ -759,6 +746,10 @@ p{
 	.arrows-right{
 		height: 80px;
 		position: relative;
+		@media (max-width: 992px){
+			margin-top: 100px;
+			height: 20px;
+		}
 		.swiper-button-prev,
 		.swiper-button-next{
 			border-color: #2CA9AD;
@@ -805,6 +796,12 @@ p{
 					background: #fff;
 					transition: .4s;
 					padding: 10px 50px;
+					@media (max-width: 1200px){
+						padding: 10px 30px;
+					}
+					@media (max-width: 992px){
+						padding: 10px 15px;
+					}
 					.bot{
 						p{
 							font-size: 25px;
@@ -812,6 +809,15 @@ p{
 							color: #2F4368;
 							line-height: 1.25;
 							margin-bottom: 0;
+							@media (max-width: 1200px){
+								font-size: 23px;
+							}
+							@media (max-width: 992px){
+								font-size: 21px;
+							}
+							@media (max-width: 768px){
+								font-size: 18px;
+							}
 						}
 					}
 					.arrow{
@@ -870,12 +876,19 @@ p{
 	padding-top:  130px;
 	margin-top: -230px;
 	margin-bottom: 252px;
+	@media (max-width: 992px){
+		margin-bottom: 17vw;
+	}
 	.img{
 		position: relative;
 		z-index: 12;
 		pointer-events: none;
 		height: 700px;
 		margin-bottom: -230px;
+		@media (max-width: 992px){
+			height: 49vw;
+			margin-bottom: -17vw;
+		}
 		img{
 			display: block;
 			max-width: 100%;
@@ -891,13 +904,24 @@ p{
 	padding-bottom: 80px;
 	.img{
 		position: relative;
+		@media (max-width: 992px){
+			height: 60vw;
+		}
 		img{
 			position: absolute;
 			right: 0;
 			display: block;
 			max-width: calc(100% + 10px + ((100vw - 1440px)/2));
+			height: auto;
 			@media (max-width: 1440px){
 				max-width: calc(100% + 10px);
+			}
+			@media (max-width: 992px){
+				position: relative;
+				width: 100%;
+				height: 100%;
+				max-width: 100%;
+				object-fit: cover;
 			}
 		}
 	}
@@ -936,6 +960,16 @@ p{
 			top: 0;
 			margin-top: 0;
 			left: auto;
+		}
+		@media (max-width: 992px){
+			.swiper-button-prev{
+				left: 0;
+				top: -60px;
+			}
+			.swiper-button-next{
+				right: 0;
+				top: -60px;
+			}
 		}
 	}
 	.logos-slider{
@@ -980,12 +1014,18 @@ p{
 	.text-set{
 		background: #2CA9AD;
 		padding: 50px 20px;
+		@media (max-width: 992px){
+			padding: 20px;
+		}
 		.row-align{
 			align-items: center;
 		}
 	}
 	.text-1{
 		padding: 0 30px;
+		@media (max-width: 992px){
+			padding: 0;
+		}
 		h3{
 			font-size: 35px;
 			line-height: 1.1;
@@ -999,6 +1039,14 @@ p{
 			color: #fff;
 			font-weight: 300;
 		}
+		@media (max-width: 1200px){
+			h3{
+				font-size: 30px;
+			}
+			p{
+				font-size: 24px;
+			}
+		}
 	}
 	.text-2{
 		p{
@@ -1007,6 +1055,9 @@ p{
 			color: #fff;
 			font-weight: 300px;
 			margin-bottom: 30px;
+			@media (max-width: 1200px){
+				font-size: 20px;
+			}
 		}
 		.detail-btn{
 			width: 220px;
@@ -1031,6 +1082,9 @@ p{
 		background: #2F4368;
 		padding: 40px;
 		height: 100%;
+		@media (max-width: 992px){
+			padding: 20px;
+		}
 		.icon{
 			img{
 				display: block;
@@ -1050,6 +1104,14 @@ p{
 			line-height: 1.2;
 			color: #fff;
 			font-weight: 300;
+		}
+		@media (max-width: 1200px){
+			h3{
+				font-size: 30px;
+			}
+			p{
+				font-size: 24px;
+			}
 		}
 		.arrow{
 			position: absolute;
@@ -1078,6 +1140,9 @@ p{
 			display: block;
 			max-width: 100%;
 			height: auto;
+			@media (max-width: 768px){
+				width: 100%;
+			}
 		}
 		.arrow{
 			position: absolute;
@@ -1106,12 +1171,26 @@ p{
 			max-width: 100%;
 			height: auto;
 		}
+		@media (max-width: 992px){
+			height: 400px;
+			img{
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
+		@media (max-width: 480px){
+			height: 320px;
+		}
 	}
 }//medzone-banner
 .page-banner{
 	.img{
 		background: #2F4368;
 		height: 700px;
+		@media (max-width: 992px){
+			height: 500px;
+		}
 		img{
 			display: block;
 			width: 100% !important;
@@ -1148,10 +1227,26 @@ p{
 }//blog-banner-img
 .page-section-1{
 	padding: 100px 0;
+	&.mt-setting{
+		@media (max-width: 1200px){
+			margin-top: -180px !important;
+		}
+		@media (max-width: 768px){
+			margin-top: -100px !important;
+		}
+	}
 	.bg-white{
 		padding-top: 80px;
-		padding-bottom: 80px;
 		box-shadow: 0 4px 44px rgba(0,0,0,.125);
+		&.non-shadow{
+			box-shadow: 0 0 0; 
+		}
+		&.pb-80{
+			padding-bottom: 80px;
+		}
+		&.pt-0{
+			padding-top: 0;
+		}
 	}
 	.img-set{
 		position: relative;
@@ -1165,16 +1260,44 @@ p{
 		.img-1{
 			position: absolute;
 			left: 0;
-			top: -90px;
+    		bottom: 27%;
+			display: flex;
+			align-items: flex-end;
 		}
 		.img-2{
 			position: relative;
 			margin: 0 auto;
+			padding:0 20%;
 		}
 		.img-3{
 			position: absolute;
 			right: 0;
-			top: -40px;
+    		bottom: 27%;
+			display: flex;
+			align-items: flex-end;
+		}
+		@media (max-width: 992px){
+			margin-top: -200px;
+			.img-2{}
+		}
+		@media (max-width: 850px){
+			margin-top: -200px;
+			.img-1{
+				top: calc(-190px + -10vw);
+				max-width: 47%;
+			}
+			.img-2{
+				margin-top: 10vw;
+				margin-bottom: 40px;
+				padding: 0 10%;
+			}
+			.img-3{
+				max-width: 62%;
+				top: calc(-140px + -10vw);
+			}
+		}
+		@media (max-width: 360px){
+			margin-top: -150px;
 		}
 	}
 	.head.t-center{
@@ -1185,7 +1308,9 @@ p{
 			}
 		}
 	}
-	.text-article{}
+	.text-article{
+		padding: 0 10px;
+	}
 	.img{
 		margin-top: 80px;
 		img{
@@ -1207,6 +1332,22 @@ p{
 				aspect-ratio: 580/378;
 				transition: .4s;
 			}
+			@media (max-width: 992px){
+				height: 400px;
+				img{
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+			@media (max-width: 480px){
+				height: 70vw;
+				img{
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
 		}
 		.text{
 			background: #EDEDED;
@@ -1217,6 +1358,13 @@ p{
 			justify-content: space-between;
 			height: 150px;
 			transition: .4s;
+			@media (max-width: 1200px){
+				padding: 10px 20px;
+			}
+			@media (max-width: 992px){
+				padding: 20px;
+				height: auto;
+			}
 			p{
 				font-size: 25px;
 				color: #2CA9AD;
@@ -1264,6 +1412,7 @@ p{
 		.img-1{
 			position: absolute;
 			bottom: -70px;
+			max-width: 46%;
 			img{
 				display: block;
 				max-width: 100%;
@@ -1278,6 +1427,7 @@ p{
 			position: absolute;
 			bottom: -70px;
 			right: 0;
+			max-width: 62%;
 			img{
 				display: block;
 				max-width: 100%;
@@ -1285,6 +1435,24 @@ p{
 				&+img{
 					position: absolute;
 					bottom: -100px;
+				}
+			}
+		}
+		@media (max-width: 992px){
+			display: flex;
+			align-items: flex-end;
+			padding-bottom: 100px;
+			.img-1{
+				position: static;
+				img{
+					&+img{display:none;}
+				}
+			}
+			.img-2{
+				position: static;
+				margin-left: -40px;
+				img{
+					&+img{display:none;}
 				}
 			}
 		}
@@ -1317,6 +1485,9 @@ p{
 .product-logos{
 	background: #F5F5F5;
 	padding: 160px 0 70px;
+	@media (max-width: 992px){
+		padding: 60px 0;
+	}
 	.logo-set{
 		display: flex;
 		justify-content: center;
@@ -1343,9 +1514,14 @@ p{
 		box-shadow: 0 4px 44px rgba(0,0,0,.125);
 		position: relative;
 		z-index: 8;
+		@media (max-width: 992px){
+			padding: 20px;
+			margin-top: -9vw;
+		}
 	}
 }//product-section-1
 .documents-section{
+	padding-bottom: 80px;
 	.item{
 		box-shadow: 0 4px 44px rgba(0,0,0,.125);
 		background: #fff;
@@ -1387,21 +1563,26 @@ p{
 				height: 100px;
 				display: grid;
 				place-items: center;
+				box-shadow: 0 4px 44px rgba(0,0,0,.125);
 			}
 		}
 	}
 }//document-section
 .contact-info{
-	padding: 80px 0;
+	padding: 80px 0 40px;
 	.item{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		text-align: center;
 		color: #000000;
+		padding-bottom: 40px;
 		.icon{
 			display: block;
 			margin-bottom: 20px;
+			@media (max-width: 992px){
+				margin-bottom: 10px;
+			}
 			img{
 				display: block;
 			}
