--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -377,34 +377,34 @@ $weights: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 	}
 	&.header-index{
 		position: fixed;
-		background: rgba(255, 255, 255, 0.0);
-		box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-		.nav{
-			a{
-				color: #fff;
-			}
-		}
-		.logo{
-			a{
-				.logo-1{
-					fill: #fff;
-				}
-				.logo-2{
-					fill: #fff;
-				}
-				.logo-3{
-					fill: #fff;
-				}
-			}
-		}
-		.support-line{
-			span{
-				color: #fff;
-			}
-			a{
-				color: #fff;
-			}
-		}
+		//background: rgba(255, 255, 255, 0.0);
+		//box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+		//.nav{
+		//	a{
+		//		color: #fff;
+		//	}
+		//}
+		//.logo{
+		//	a{
+		//		.logo-1{
+		//			fill: #fff;
+		//		}
+		//		.logo-2{
+		//			fill: #fff;
+		//		}
+		//		.logo-3{
+		//			fill: #fff;
+		//		}
+		//	}
+		//}
+		//.support-line{
+		//	span{
+		//		color: #fff;
+		//	}
+		//	a{
+		//		color: #fff;
+		//	}
+		//}
 	}
 	&.header-fixed{
 		background: rgba(255, 255, 255, 0.9);
@@ -981,13 +981,38 @@ p{
 					display: flex;
 					justify-content: center;
 					align-items: center;
+					padding: 10px;
+					position: relative;
 					img{
 						display: block;
 						max-width: 100%;
 						height: auto;
 					}
+					span.note{
+						display: block;
+						background: #f1f1f100;
+						padding: 5px;
+						color: #2CA9AD;
+						font-size: 14px;
+						position: absolute;
+						top: 0;
+						left: 50%;
+						transform: translateX(-50%);
+					}
 				}
 			}
+		}
+	}
+	.all-comments{
+		display: flex;
+		justify-content: center;
+		padding-top: 20px;
+		a{
+			display: inline-block;
+			padding: 10px 20px;
+			font-size: 18px;
+			color: #2CA9AD;
+			border: 1px solid #2CA9AD;
 		}
 	}
 }//testimonials
@@ -1001,9 +1026,17 @@ p{
 		gap: 5px;
 		align-items: center;
 		color: #2CA9AD;
+		margin-bottom: 20px;
 		svg{
 			display: block;
 		}
+	}
+	a{
+		display: inline-block;
+		padding: 10px 20px;
+		color: #2CA9AD;
+		font-size: 16px;
+		border: 1px solid #2CA9AD;
 	}
 }//testimonials-card
 .main-section-3{
@@ -1545,7 +1578,7 @@ p{
 	}
 	.pdf-item{
 		margin-top: 80px;
-		a{
+		.item{
 			display: block;
 			position: relative;
 			transition: .4s;
@@ -1561,7 +1594,8 @@ p{
 				bottom: 30px;
 				width: 100px;
 				height: 100px;
-				display: grid;
+				//display: grid;
+				display: none;
 				place-items: center;
 				box-shadow: 0 4px 44px rgba(0,0,0,.125);
 				@media (max-width: 768px){
